# pymodsurgical

./: .gitignore  LICENSE  README.md  README.rst  analyse_depth.py  analyse_modal_coordinates.py  analyse_video.py  complex.py  depth.py  displacement.py  filtering.py  interactive_demo.py  main.tex  masking.py  motion_spectrum.py  ode_solver.py  optical_flow.py  pyproject.toml  references.bib  requirements.txt  run_demo.py  test_haptic.py  testing_requirements.txt  utils.py  video_reader.py  video_writer.py
.github/workflows/: python-test.yml
demos/: config.json
examples/: README.md  heart_beating_force.json  heart_beating_generator.json  liver_demo.json  liver_video_generator.json
scripts/: analyse_stats.py  analyse_video.py  calculate_modal_disp.py  force_metrics.py  run_demo.py
src/pymodal_surgical/: __init__.py  complex.py  depth.py  displacement.py  filtering.py  interactive_demo.py  masking.py  motion_spectrum.py  optical_flow.py  utils.py  video_writer.py
src/pymodal_surgical/apps/: README.md  __init__.py  interactive_demo.py  utils.py
src/pymodal_surgical/apps/force_estimator/: __main__.py  force_estimator.py  stats.py
src/pymodal_surgical/apps/interactive_demo/: __main__.py  interactive_demo.py
src/pymodal_surgical/apps/video_analysis/: __main__.py  analysis_gui.py  basic_gui.py  gui.py  video_analysis.py
src/pymodal_surgical/apps/video_generator/: __main__.py  video_generator.py
src/pymodal_surgical/modal_analysis/: __init__.py  deformation.py  depth.py  force.py  functions.py  math_helper.py  modal_analysis.py  motion.py  optical_flow.py  plot_utils.py  solver.py  utils.py
src/pymodal_surgical/video_processing/: __init__.py  filtering.py  masking.py  reader.py  writer.py
tests/: __init__.py  test_complex.py  test_depth.py  test_filtering.py  test_interactive_demo.py  test_masking.py  test_ode_solver.py  test_optical_flow.py  test_video_reader.py  test_video_writer.py
tests/modal_analysis/: __init__.py  test_depth.py  test_math_helper.py  test_motion.py  test_optical_flow.py  test_plot_utils.py  test_solver.py  test_utils.py
tests/video_processing/: __init__.py  test_filtering.py  test_masking.py  test_reader.py  test_writer.py
