[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pymodal_surgical"
version = "0.1.0"
description = "A Python package for surgical modal analysis"
authors = [
    {name = "Mikel De Iturrate Reyzabal", email = "mikel.de_iturrate_reyzabal@kcl.ac.uk"},
]
readme = {file = "README.rst", content-type = "text/x-rst"}
license = "MIT"
requires-python = ">= 3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "attrs==23.2.0",
    "Automat==22.10.0",
    "build==1.2.1",
    "buildtools==1.0.6",
    "certifi==2024.2.2",
    "charset-normalizer==3.3.2",
    "colorama==0.4.6",
    "constantly==23.10.4",
    "contourpy==1.2.0",
    "cycler==0.12.1",
    "docopt==0.6.2",
    "filelock==3.13.1",
    "fonttools==4.49.0",
    "fsspec==2024.2.0",
    "furl==2.1.3",
    "greenlet==3.0.3",
    "huggingface-hub==0.21.3",
    "hyperlink==21.0.0",
    "idna==3.6",
    "incremental==22.10.0",
    "Jinja2==3.1.3",
    "joblib==1.3.2",
    "kiwisolver==1.4.5",
    "MarkupSafe==2.1.5",
    "matplotlib==3.8.3",
    "mpmath==1.3.0",
    "networkx==3.2.1",
    "numpy==1.26.4",
    "opencv-python==4.9.0.80",
    "orderedmultidict==1.0.1",
    "packaging==23.2",
    "pillow==10.2.0",
    "pygame==2.5.2",
    "pyparsing==3.1.1",
    "pyproject_hooks==1.0.0",
    "pyrealsense2==2.55.1.6486",
    "pyserial==3.5",
    "PySide6==6.6.3",
    "PySide6_Addons==6.6.3",
    "PySide6_Essentials==6.6.3",
    "python-dateutil==2.8.2",
    "PyYAML==6.0.1",
    "redo==2.0.4",  
    "requests==2.31.0",
    "safetensors==0.4.2",
    "scikit-learn==1.4.1.post1",
    "scipy==1.12.0",
    "shiboken6==6.6.3",
    "simplejson==3.19.2",
    "six==1.16.0",
    "SQLAlchemy==2.0.29",
    "sympy==1.12",
    "threadpoolctl==3.3.0",
    "timm==0.9.16",
    "torch==2.2.1+cu121",
    "torchaudio==2.2.1+cu121",
    "torchvision==0.17.1",
    "tqdm==4.66.2",
    "Twisted==24.3.0",
    "twisted-iocpsupport==1.0.4",
    "typing_extensions==4.10.0",
    "urllib3==2.2.1",
    "zope.interface==6.3",
]

[project.optional-dependencies]
haptic = [
    "pyOpenHaptics==1.0.0"
]

[projects.url]
Homepage = "https://github.com/mikelitu/surgical-video-modal-analysis"

